--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@heroicons/react": "v1",
+    "@matejmazur/react-katex": "^3.1.3",
     "@supabase/supabase-js": "^2.49.4",
     "firebase": "^11.6.0",
+    "katex": "^0.16.22",
     "mathlive": "^0.105.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-latex-next": "^3.0.0",
     "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
     "supabase": "supabase/supabase-js"
